# mail-attachment-download

./: .gitignore  LICENSE  config.toml  pyproject.toml
src/mail_attachment_download/: __main__.py
