[tool.poetry]
name = "mail-attachment-download"
version = "0.1.0"
description = ""
authors = ["Devin Vargiu <devin.vargiu@gmail.com>"]
readme = "README.md"
packages = [{include = "mail_attachment_download", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
